[package]
name = "vob"
description = "Vector of Bits with Vec-like API and usize backing storage"
repository = "https://github.com/softdevteam/vob/"
version = "2.0.2"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
# This should be "Apache-2.0 OR MIT OR UPL-1.0" but crates.io doesn't know about
# UPL-1.0.
license = "Apache-2.0 OR MIT"
categories = ["data-structures"]
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
num-traits = "0.2.1"
serde = { version="1.0", features=["derive"], optional=true }

[dev-dependencies]
rand = "0.6"
rand_pcg = "0.1"

[features]
unsafe_internals = []
