[package]
name = "vob"
description = "Vector of Bits with Vec-like API and usize backing storage"
repository = "https://github.com/softdevteam/vob/"
version = "2.0.6"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["data-structures"]
edition = "2018"

[build-dependencies]
rustc_version = "0.3"

[dependencies]
num-traits = "0.2.14"
serde = { version="1.0", features=["derive"], optional=true }

[dev-dependencies]
rand = "0.8"
rand_pcg = "0.3"

[features]
unsafe_internals = []
