[package]
name = "vob"
description = "Vector of Bits with Vec-like API and usize backing storage"
repository = "https://github.com/softdevteam/vob/"
version = "3.0.3"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0/MIT"
categories = ["data-structures"]
edition = "2018"

[build-dependencies]
rustc_version = "0.4"

[dependencies]
num-traits = "0.2.14"
serde = { version="1.0", features=["derive"], optional=true }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
rand_pcg = "0.3"

[[bench]]
name = "vob"
harness = false

[features]
unsafe_internals = []
